--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "split-file": "^2.2.1"
   },
   "keywords": [],
   "author": "Thisara Pramuditha",
