--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
+    "mongoose": "^5.12.9",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4",
